k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: abelsspace
  labels:
    name: abelsspace
    app: abelsspace
    version: v1
