k8s/go-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
  namespace: abelsspace
  labels:
    app: go-app
    version: v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: abdelilahachir/cloudstartgolangapi:latest
        ports:
        - containerPort: 8080
