k8s/go-app-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: go-app-service
  namespace: abelsspace
  labels:
    app: go-app
    version: v1
spec:
  selector:
    app: go-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
