k8s/mysql-service.yaml
# This file defines a Kubernetes service for a MySQL database.
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: abelsspace
  labels:
    app: mysql
    version: v1
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
